# vega-rust-sdk

./: Cargo.toml
crypto/: Cargo.toml
crypto/src/: lib.rs
protobufs/: Cargo.toml
wallet_client/: Cargo.toml
wallet_client/src/: commands.rs
