[package]
name = "vega_protobufs"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
prost = "0.12.3"
tonic = { version = "0.10.2", features = ["tls"] }
prost-types = "0.12.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10.2"
walkdir = "2"
protobuf-src = "1.1.0"
